--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -7,31 +7,31 @@ const i18n = getI18N({ currentLocale })
 ---
 <h1 class="neumorphism-pressed-text-sm text-6xl text-center md:text-left mt-24 font-bold text-site-300 dark:text-site-50">{i18n.ABOUT_ME.TITLE}</h1>
 <section class="bento w-full grid grid-cols-12 gap-6 mx-auto mt-12 sm:text-lg lg:text-3xl">
-    <BentoItem class="col-span-5 row-span-1 bg-site-300 text-site-600 lg:col-span-8 lg:row-span-1" title={i18n.ABOUT_ME.BENTO_1.TITLE}>
+    <BentoItem class="col-span-5 row-span-1 bg-site-300 text-site-600 lg:col-span-8 lg:row-span-1 dark:bg-gray-300 dark:text-gray-600 " title={i18n.ABOUT_ME.BENTO_1.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_1.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-7 row-span-1 bg-site-200 text-site-800 lg:col-span-4 lg:row-span-2" title={i18n.ABOUT_ME.BENTO_2.TITLE}>
+    <BentoItem class="col-span-7 row-span-1 bg-site-200 text-site-800 lg:col-span-4 lg:row-span-2 dark:bg-gray-700 dark:text-gray-200" title={i18n.ABOUT_ME.BENTO_2.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_2.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-7 row-span-1 bg-site-600 text-site-100 lg:col-span-4 lg:row-span-2" title={i18n.ABOUT_ME.BENTO_3.TITLE}>
+    <BentoItem class="col-span-7 row-span-1 bg-site-600 text-site-100 lg:col-span-4 lg:row-span-2 dark:bg-gray-500 dark:text-gray-100" title={i18n.ABOUT_ME.BENTO_3.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_3.PARAGRAPHS} </p>
     </BentoItem>
-    <BentoItem class="col-span-5 row-span-1 bg-site-800 text-site-300 lg:bg-site-100 lg:text-site-600 lg:col-span-4 lg:row-span-3" title={i18n.ABOUT_ME.BENTO_4.TITLE}>
+    <BentoItem class="col-span-5 row-span-1 bg-site-800 text-site-300 lg:bg-site-100 lg:text-site-600 lg:col-span-4 lg:row-span-3 dark:bg-gray-900 dark:text-gray-300 lg:dark:bg-gray-50 lg:dark:text-gray-700" title={i18n.ABOUT_ME.BENTO_4.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_4.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-12 row-span-1 bg-site-100 text-site-600 lg:bg-site-800 lg:text-site-300 lg:col-span-4 lg:row-span-2" title={i18n.ABOUT_ME.BENTO_5.TITLE}>
+    <BentoItem class="col-span-12 row-span-1 bg-site-100 text-site-600 lg:bg-site-800 lg:text-site-300 lg:col-span-4 lg:row-span-2 dark:bg-gray-50 dark:text-gray-700 lg:dark:bg-gray-900 lg:dark:text-gray-300" title={i18n.ABOUT_ME.BENTO_5.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_5.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-4 row-span-1 bg-site-800 text-site-300 lg:col-span-4 lg:row-span-3" title={i18n.ABOUT_ME.BENTO_6.TITLE}>
+    <BentoItem class="col-span-4 row-span-1 bg-site-800 text-site-300 lg:col-span-4 lg:row-span-3 dark:bg-gray-900 dark:text-gray-300" title={i18n.ABOUT_ME.BENTO_6.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_6.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-8 row-span-1 bg-site-600 text-site-100 lg:col-span-8 lg:row-span-1 " title={i18n.ABOUT_ME.BENTO_7.TITLE}>
+    <BentoItem class="col-span-8 row-span-1 bg-site-600 text-site-100 lg:col-span-8 lg:row-span-1 dark:bg-gray-500 dark:text-gray-100 " title={i18n.ABOUT_ME.BENTO_7.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_7.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-6 row-span-1 bg-site-200 text-site-800 lg:col-span-3 lg:row-span-1" title={i18n.ABOUT_ME.BENTO_8.TITLE}>
+    <BentoItem class="col-span-6 row-span-1 bg-site-200 text-site-800 lg:col-span-3 lg:row-span-1 dark:bg-gray-700 dark:text-gray-200" title={i18n.ABOUT_ME.BENTO_8.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_8.PARAGRAPHS}</p>
     </BentoItem>
-    <BentoItem class="col-span-6 row-span-1 bg-site-300 text-site-600 lg:col-span-5 lg:row-span-1" title={i18n.ABOUT_ME.BENTO_9.TITLE}>
+    <BentoItem class="col-span-6 row-span-1 bg-site-300 text-site-600 lg:col-span-5 lg:row-span-1 dark:bg-gray-300 dark:text-gray-600" title={i18n.ABOUT_ME.BENTO_9.TITLE}>
         <p slot="content">{i18n.ABOUT_ME.BENTO_9.PARAGRAPHS}</p>
     </BentoItem>
 </section>
