--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -14,10 +14,10 @@ const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
 <nav class="mt-12 mb-8 mx-5 text-site-300 flex gap-5 justify-center flex-wrap dark:text-site-50">
-    <Filter class="hover:text-site-200 ">
+    <!-- <Filter class="hover:text-site-200 ">
         <NoFilter />
         <h1>{i18n.PROJECTS.FILTER}</h1>
-    </Filter>
+    </Filter> -->
     <Filter class="hover:text-[#E44D26] ">
         <Html />
         <h1>Html</h1>
