--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -8,29 +8,29 @@ const i18n = getI18N({ currentLocale })
     <div class="neumorphism-flat-sm rounded-2xl p-4">
         <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-semibold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_1.TITLE}</h3>
         <ul>
-            <li><a href="https://astro.build">Astro</a></li>
-            <li><a href="https://tailwindcss.com">Tailwind</a></li>
-            <li><a href="https://developer.mozilla.org/es/docs/Web/HTML">HTML</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS#">CSS</a></li>
-            <li><a href="https://tabler.io/icons">TablerIcon</a></li>
-            <li><a href="https://www.typescriptlang.org">TypeScript</a></li>
+            <li><a href="https://astro.build" target="_blank">Astro</a></li>
+            <li><a href="https://tailwindcss.com" target="_blank">Tailwind</a></li>
+            <li><a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank">HTML</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS#" target="_blank">CSS</a></li>
+            <li><a href="https://tabler.io/icons" target="_blank">TablerIcon</a></li>
+            <li><a href="https://www.typescriptlang.org" target="_blank">TypeScript</a></li>
         </ul>
     </div>
     <div class="neumorphism-flat-sm rounded-2xl p-4">
         <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_2.TITLE}</h3>
         <ul>
-            <li><a href=`/${i18n.LANG}/privacy`>{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_1}</a></li>
-            <li><a href=`/${i18n.LANG}/terms`>{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_2}</a></li>
+            <li><a href=`/${i18n.LANG}/privacy` target="_blank">{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_1}</a></li>
+            <li><a href=`/${i18n.LANG}/terms` target="_blank">{i18n.PRE_FOOTER.SECTION_2.SUBTITLE_2}</a></li>
         </ul>
     </div>
     <div class="neumorphism-flat-sm rounded-2xl p-4">
         <h3 class="neumorphism-pressed-text-sm text-site-100 text-md font-bold tracking-widest mb-3 mx-auto dark:text-site-200">{i18n.PRE_FOOTER.SECTION_3.TITLE}</h3>
         <ul>
-            <li><a href="https://www.instagram.com/maugarola/">Instagram</a></li>
-            <li><a href="https://www.facebook.com/maugarola/">Facebook</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">{i18n.PRE_FOOTER.SECTION_3.SUBTITLE_1}</a></li>
-            <li><a href="">{i18n.PRE_FOOTER.SECTION_3.SUBTITLE_2}</a></li>
+            <li><a href="https://www.instagram.com/maugarola/" target="_blank">Instagram</a></li>
+            <li><a href="https://www.facebook.com/maugarola/" target="_blank">Facebook</a></li>
+            <li><a href="" target="_blank">Blog</a></li>
+            <li><a href="" target="_blank">{i18n.PRE_FOOTER.SECTION_3.SUBTITLE_1}</a></li>
+            <li><a href="" target="_blank">{i18n.PRE_FOOTER.SECTION_3.SUBTITLE_2}</a></li>
         </ul>
     </div>
 </section>
