--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,6 +4,8 @@ import Filters from './Filters.astro'
 import { getI18N } from "../i18n"
 import QuoteImage from '../assets/Quote-Image.webp'
 import GarageSale from '../assets/Garage-Sale.webp'
+import TinyPiano from '../assets/Tiny-Piano.png'
+import CssChallenge from '../assets/Css-Challenge.png'
 
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
@@ -11,10 +13,22 @@ const i18n = getI18N({ currentLocale })
 <h1 class="neumorphism-pressed-text-sm text-center md:text-left text-6xl mt-24 font-bold text-site-300 dark:text-site-50">{i18n.PROJECTS.TITLE}</h1>
 <Filters />
 <div class="projects neumorphism-flat rounded-3xl md:grid p-5 md:gap-5 dark:text-site-50">
+    <a href="https://maugarola-csschallenge.netlify.app" target="_blank">
+        <Project 
+            title="100Days-CSS-Challenge" 
+            description="The perform of my CSS Skils" 
+            image={CssChallenge}
+            class="mb-5"/>
+    </a>
     <Project 
         title="Quote-Image" 
         description="An inspirational quote image generator." 
         image={QuoteImage}
+        class="mb-5"/>
+    <Project 
+        title="Tiny-Piano" 
+        description="A miniature virtual piano for practicing and enjoying music."
+        image={TinyPiano}
         class="mb-5"/>
     <Project 
         title="Garage-Sale" 
@@ -23,7 +37,6 @@ const i18n = getI18N({ currentLocale })
         class="mb-0"/> <!-- Use margin 0 on the last item -->
     <!-- <Project title="Tic-tac-toe-Extrem" description="An advanced version of the classic tic-tac-toe game."/>
     <Project title="Sound-Maaker" description="A tool for create sound effects."/>
-    <Project title="Tiny-Piano" description="A miniature virtual piano for practicing and enjoying music."/>
     <Project title="Typing-test" description="A typing speed test to improve your typing skills."/> -->
 </div>
 <style>
